2008-10-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (DespeckleImage): Accelerate using OpenMP.
	* magick/paint.c (OpaqueImage): Update to use pixel iterators.
	(TransparentImage): Update to use pixel iterators.
	* magick/decorate.c (FrameImage): Accelerate using OpenMP.
	(RaiseImage): Accelerate using OpenMP.

2008-10-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImageRegion): Start of new function
	to act as a lighter-weight yet more flexible image composition
	interface.
	* magick/transform.c (ChopImage): Accelerate using OpenMP.
	(CropImage): Accelerate using OpenMP.
	(FlipImage): Accelerate using OpenMP.
	(FlopImage): Accelerate using OpenMP.
	* magick/effect.c (ThresholdImage): Accelerate using OpenMP.

2008-10-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (AcquireOneCacheViewPixel): Optimize
	implementation.
	* magick/effect.c (MedianFilterImage): Accelerate using OpenMP.
	(ReduceNoiseImage): Accelerate using OpenMP.

2008-10-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (WaveImage): Accelerate using OpenMP.
	(SwirlImage): Accelerate using OpenMP.
	(ImplodeImage): Accelerate using OpenMP.

2008-10-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (GetCacheViewRegion): New function to
	return the region bounded by a pixel cache view.
	* magick/constitute.c (ExportViewPixelArea): New function to
	support exporting the pixels from a pixel cache view.
	(ImportViewPixelArea): New function to support importing pixels
	to a pixel cache view.
	* magick/pixel_cache.c (ReadStream): Eliminated function.
	(WriteStream): Eliminated function.
	(ClonePixelCacheMethods): Eliminated function.
	* magick/image.h: Eliminated StreamHandler call-back type.
	Eliminated ImageInfo stream member.
	* magick/pixel_cache.c (GetCacheViewArea): New function to return
	the area of a cache view.